--- a/css/style.css
+++ b/css/style.css
@@ -8264,5 +8264,13 @@ body.md-skin {
   width:300px;
   height:475px;
   background-color: #f5f5f5;
+  overflow-x: hidden;
   overflow-y: scroll;
+}
+.phone-content p {
+  word-wrap: break-word;
+  text-align: center;
+}
+.phone-content img {
+  width:100%;
 }
